Closed Bug 1561627 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::dom::BrowserBridgeHost::UpdateDimensions]

Categories

(Core :: Graphics, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla70
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox67 --- unaffected
firefox68 --- unaffected
firefox69 + disabled
firefox70 --- verified

People

(Reporter: marcia, Assigned: rhunt)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-f1d1a5c4-3d4a-4afa-9a01-60f3b0190623.

Seen while looking at nightly crash stats, started in 20190623094201 : https://bit.ly/2NgurE1.

Possible regression range based on build id: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e729bfa4f60157a8e8ed9cd3ae5f9d854ab7f7f3&tochange=a8c21ee98a4c2f683335b8358c11b2fceb863f05

Top 10 frames of crashing thread:

0 xul.dll void mozilla::dom::BrowserBridgeHost::UpdateDimensions dom/ipc/BrowserBridgeHost.cpp:81
1 xul.dll nsFrameLoader::UpdatePositionAndSize dom/base/nsFrameLoader.cpp:2453
2 xul.dll nsSubDocumentFrame::ReflowFinished layout/generic/nsSubDocumentFrame.cpp:850
3 xul.dll void mozilla::PresShell::HandlePostedReflowCallbacks layout/base/PresShell.cpp:3970
4 xul.dll void mozilla::PresShell::DidDoReflow layout/base/PresShell.cpp:9096
5 xul.dll bool mozilla::PresShell::ProcessReflowCommands layout/base/PresShell.cpp:9469
6 xul.dll mozilla::PresShell::DoFlushPendingNotifications layout/base/PresShell.cpp:4233
7 xul.dll void nsRefreshDriver::Tick layout/base/nsRefreshDriver.cpp:1986
8 xul.dll void mozilla::RefreshDriverTimer::TickRefreshDrivers layout/base/nsRefreshDriver.cpp:327
9 xul.dll void mozilla::RefreshDriverTimer::Tick layout/base/nsRefreshDriver.cpp:344

All of the crashes have MOZ_RELEASE_ASSERT(widget). I see the content (webIsolated= in the process type field, so wondering if this is fission related?

In my case (bp-ecc7f7cd-e011-47c7-a341-f1fe30190629), it's definitely related to fission. I can provide steps to reproduce the crash.

  1. Open youtube.com
  2. Close some "recommendation channels" by clicking "X" images
  3. Hit Ctrl+r to reload

Marking as P2 since this is a recent regression.

Has Regression Range: --- → yes
Has STR: --- → yes
Priority: -- → P2

It's pretty unlikely that this was caused by bug 1539702. Ryan added the assert he's probably a better person to ask about what could be happening.

Flags: needinfo?(jmuizelaar) → needinfo?(rhunt)

We shouldn't be crashing here. This code is mostly copied from BrowserParent which doesn't crash. I have a patch to fix this.

Assignee: nobody → rhunt
Flags: needinfo?(rhunt)

I should also add that this is fission related and can't happen without fission enabled.

Pushed by rhunt@eqrion.net:
https://hg.mozilla.org/integration/autoland/rev/f71209d709cc
Don't crash in BrowserBridgeHost if we don't have a widget. r=mattwoodrow
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Flags: qe-verify+

I didn't manage to reproduce the issue following the STR from comment 3 using Fx Nightly 69.0a1 (2019-06-25) and Fx Nightly 69.0a1 (2019-06-26) with Ubuntu 18.04 LTS x64. I looked in the crash reports (https://crash-stats.mozilla.org/signature/?signature=mozilla%3A%3Adom%3A%3ABrowserBridgeHost%3A%3AUpdateDimensions&date=%3E%3D2019-07-07T09%3A04%3A00.000Z&date=%3C2019-10-07T09%3A04%3A00.000Z&_columns=date&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=reason&_columns=address&_columns=install_time&_columns=startup_crash&_sort=-date&page=1#reports) and I didn't see the crash reproducing after the date it was fixed.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: