Bug 1561627 - Don't crash in BrowserBridgeHost if we don't have a widget. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D37170